Added kafka-rest init.d style start|stop script and dist pom.
Change-Id: I52c7ec03edc3a1771246276b556158a8d8ada739